--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
 </head>
 <body>
     <h2>電獺作業</h2>
+    <div id="aotter-ad-plugin"></div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script type="text/javascript" src="./aotterAd.js"></script>
     <script>
         $(document).ready(function() {
-            aotterAd.loadAd('VIDEO');
-        })
+            aotterAd.loadAd();
+        });
     </script>
 </body>
 </html>
