--- a/index.html
+++ b/index.html
@@ -13,6 +13,14 @@
     <script>
         $(document).ready(function() {
             aotterAd.loadAd();
+
+            aotterAd.on('on-ad-loaded', function() {
+                console.log('load success');
+            })
+
+            aotterAd.on('on-ad-failed', function() {
+                console.log('load error');
+            })
         });
     </script>
 </body>
