compress js and write test

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <div id="is-ad-show" class="info">廣告尚未被看到</div>
     <div id="aotter-ad-plugin"></div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script type="text/javascript" src="./aotterAd.js"></script>
+    <script type="text/javascript" src="./dist/aotterAd.js"></script>
     <script>
         $(document).ready(function() {
             aotterAd.loadAd();
